--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,6 @@
 [*.cs]
 indent_size=2
+tab_siwe=2
 indent_style=space
 csharp_new_line_before_open_brace = none
 csharp_new_line_before_else = false
