--- a/CsharpBackL2.csproj
+++ b/CsharpBackL2.csproj
@@ -1,10 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
+<Project Sdk="Microsoft.NET.Sdk">  <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-  </PropertyGroup>
-
-</Project>
+  </PropertyGroup>  <ItemGroup>
+    <PackageReference Include="ConcurrencyVisualizer" Version="3.0.0" />
+    <PackageReference Include="System.Interactive" Version="6.0.1" />
+  </ItemGroup></Project>
