--- a/CsharpBackL2.csproj
+++ b/CsharpBackL2.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="benchmarkdotnet" Version="0.13.4" />
+  </ItemGroup>
+
 </Project>
